--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "script.js",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-html": "^6.1.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4"
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.0.0"
   },
   "scripts": {
     "lint": "eslint ./src",
